--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input type="submit" id="submit">
 </form>
     <p id="message"></p>
+    <h1> Genie</h1>
     <script src="./app.js"></script>
 </body>
 </html>
